      terminated prior to it being used.
    - Change to position of begin_session, so that it matches the cleanup
      order on shutdown.
    - shutdown: Call end_session to clean up the chroot.
  * Sbuild/Conf.pm: Add linux-libc-dev, gnumach-dev, hurd-dev and
    kfreebsd-kernel-headers to @toolchain_regex.  Thanks to Clint Adams
    (Closes: #425855).
  * Sbuild/Log.pm.in: Remove trailing whitespace.
  * debian/NEWS: Renamed from debian/NEWS.Debian (Closes: #425370).
    Thanks to Lucas Nussbaum for spotting this.

 -- Roger Leigh <rleigh@debian.org>  Sat, 26 May 2007 13:52:48 +0100

sbuild (0.54) unstable; urgency=low

  * debian/control:
    - Remove sudo from Depends.
    - Add schroot to Depends.
    - Remove schroot from Recommends.
    - Depend on dctrl-tools rather than the transitional grep-dctrl package.
      Thanks to Jonh Wendell (Closes: #417573).
  * debian/rules:
    - Don't install sbuild.conf.local.
    - Install sbuild.conf into /etc/sbuild.
  * debian/NEWS.Debian:
    - New file.
    - Document removal of manual source dependencies and sudo.
    - Document removal of support for building from a directory.
    - Document removal of building on the host system.
    - Document sudo->schroot migration.
    - Document change in $sbuild_mode default.
  * debian/README.Debian:
    - Document removal of manual src-deps.
    - Remove requirements for chroot symlinks in working directory.
  * sbuild:
    - Remove read_deps, so manual src-deps are no longer read.  The
      remainder of the manual src-deps support remains to be removed.
    - Quote all arguments to system commands such as "rm -rf", to prevent
      potential disasters.
    - Update copyrights, and encode in UTF-8.
    - Use "du -k -s" instead of "du -s" to increase portability.  Thanks to
      Martin Koeppe (Closes: #418061).
    - Compute package, version, directory and whether to download sources
      before calling fetch_source_files, because all the needed information