@@ -31,7 +31,12 @@ sbuild (0.55) unstable; urgency=low
   * Sbuild/Conf.pm: Add linux-libc-dev, gnumach-dev, hurd-dev and
     kfreebsd-kernel-headers to @toolchain_regex.  Thanks to Clint Adams
     (Closes: #425855).
-  * Sbuild/Log.pm.in: Remove trailing whitespace.
+  * Sbuild/Log.pm.in:
+    - Remove trailing whitespace.
+    - open_log, open_pkg_log: Ignore SIGINT, SIGQUIT, SIGTERM and SIGPIPE
+      in the logger processes, so that logging continues if the process
+      group is signalled to terminate.  They will exit when the group leader
+      exits or closes the pipe.
   * debian/NEWS: Renamed from debian/NEWS.Debian (Closes: #425370).
     Thanks to Lucas Nussbaum for spotting this.
 
